style.css
/**
 * Theme Name: Defenestrate
 * Theme URI: github.com/trepmal/defenestrate
 * Description: When you just need to throw your old theme out the window
 * Author: Kailey Lampert
 * Author URI: kaileylampert.com
 * Version:
 * License: GNU General Public License v2 or later
 * License URI: http://www.gnu.org/licenses/gpl-2.0.html
 * Tags: light, one-column, fluid-layout, responsive-layout, custom-background, custom-menu, featured-image-header, featured-images, flexible-header, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready
 * Text Domain: defenestrate
 */

/*
######## ##       ######## ##     ## ######## ##    ## ########  ######
##       ##       ##       ###   ### ##       ###   ##    ##    ##    ##
##       ##       ##       #### #### ##       ####  ##    ##    ##
######   ##       ######   ## ### ## ######   ## ## ##    ##     ######
##       ##       ##       ##     ## ##       ##  ####    ##          ##
##       ##       ##       ##     ## ##       ##   ###    ##    ##    ##
######## ######## ######## ##     ## ######## ##    ##    ##     ######
*/
body {
	font-size: 62.5%;
	text-align: center;
	background: #fcfcfc;
	color: #333;
	margin: 0;
	padding: 0;
	font-family: 'Source Sans Pro', sans-serif;
}
a {
	color: #044;
	text-decoration: none;
	-o-transition:.5s;
	-ms-transition:.5s;
	-moz-transition:.5s;
	-webkit-transition:.5s;
	transition:.5s;
}
a:hover {
	color: #066;
}
h1, h2, h3, h4, h5 {
	font-family: 'Antic Slab', serif;
	margin: 0;
	padding: 0.5rem 0;
	line-height: 160%;
}
h1 {
	font-size: 3rem;
}
h2 {
	font-size: 1.9rem;
}
h3 {
	font-size: 1.8rem;
}
h4 {
	font-size: 1.75rem;
}
h5 {
	font-size: 1.7rem;
}

p {
	margin-bottom: 2rem;
}

code {
	padding: 0 3px;
	white-space: nowrap;
	background: #ddd;
}
pre {
	font-size: 1.1rem;
	line-height: 1.3rem;
	overflow-x: scroll;
	border: 1px solid #eee;
	padding: 5px;
}
pre code {
	padding: 0;
	white-space: pre;
	background: none;
}

/*
 ######  ##          ###     ######   ######  ########  ######
##    ## ##         ## ##   ##    ## ##    ## ##       ##    ##
##       ##        ##   ##  ##       ##       ##       ##
##       ##       ##     ##  ######   ######  ######    ######
##       ##       #########       ##       ## ##             ##
##    ## ##       ##     ## ##    ## ##    ## ##       ##    ##
 ######  ######## ##     ##  ######   ######  ########  ######
*/
small,
.little {
	font-size: 1rem;
}
.meta {
	display: block;
	font-size: 0.8rem;
	line-height: 1.3rem;
	text-transform: uppercase;
}

/*
 ######  ######## ########  ##     ##  ######  ######## ##     ## ########  ########
##    ##    ##    ##     ## ##     ## ##    ##    ##    ##     ## ##     ## ##
##          ##    ##     ## ##     ## ##          ##    ##     ## ##     ## ##
 ######     ##    ########  ##     ## ##          ##    ##     ## ########  ######
      ##    ##    ##   ##   ##     ## ##          ##    ##     ## ##   ##   ##
##    ##    ##    ##    ##  ##     ## ##    ##    ##    ##     ## ##    ##  ##
 ######     ##    ##     ##  #######   ######     ##     #######  ##     ## ########
*/
#respond,
#comments,
.liner {
	width: 100%;
	max-width: 800px;
	margin: auto;
}
.container {
	text-align: left;
	font-size: 1.6rem;
	line-height: 160%;
}
.archive-header {
	background: rgba( 184, 184, 184, 0.2 );
	padding: 50px 0 25px;
}
.entry-title {
	padding: 50px 0 25px;
	position: relative;
	overflow: hidden;
}
.has-thumbnail .entry-title {
}
.entry-title img {
	top: 0;
	max-width: 100%;
	min-width: 600px;
	height: auto;
	position: absolute;
	z-index: -1;
	-webkit-filter: saturate(10%) brightness( 200% ) contrast( 50% );
}
.single .has-thumbnail .entry-title {
	padding-top: 0;
}
.single .has-thumbnail .entry-title img {
	position: static;
	-webkit-filter: none;
}
article.hentry {
}
article.hentry:last-child {
}
article.hentry.sticky {
	background: #ddf4f4;
}

.entry-content {
	border-top: 1px solid #bbb;
	padding: 25px 0 50px;
	-o-transition:.5s;
	-ms-transition:.5s;
	-moz-transition:.5s;
	-webkit-transition:.5s;
	transition:.5s;
}
.entry-content:hover {
	border-top-color: #000;
}

.entry-content footer {
}

footer {
	color: #777;
	font-size: 1.0rem;
	line-height: 160%;
}

header.page-footer {
	background: rgba( 220, 220, 220, 0.4 );
	padding: 100px;
	font-size: 1.4rem;
}

/*
 ####   ####  #    # #    # ###### #    # #####  ####
#    # #    # ##  ## ##  ## #      ##   #   #   #
#      #    # # ## # # ## # #####  # #  #   #    ####
#      #    # #    # #    # #      #  # #   #        #
#    # #    # #    # #    # #      #   ##   #   #    #
 ####   ####  #    # #    # ###### #    #   #    ####
*/
#comments {
	border-top: 1px solid #bbb;
	padding: 0 0 50px;
}
.comment-list {
	padding: 0;
	margin: 0;
	font-size: 1.3rem;
	line-height: 160%;
}
li.comment {
	list-style: none;
	padding: 20px 0;
	margin: 0;
}
li.comment li.comment {
	margin-left: 40px;
}
.comment-meta {
	font-size: 1rem;
	line-height: 1.3rem;
}
	header.comment-meta {
	}
		header.comment-meta .avatar {
			float: left;
			margin: 0 5px 0 0;
		}
		.bypostauthor header.comment-meta .avatar {
			-o-transition:.5s;
			-ms-transition:.5s;
			-moz-transition:.5s;
			-webkit-transition:.5s;
			transition:.5s;
			border-bottom: 3px solid #555;
		}
		.bypostauthor header.comment-meta .avatar:hover {
			border-bottom-width: 5px;
		}
	footer.comment-meta {
		text-align: left;
	}
	.comment-meta cite {
		display: block;
	}
.comment-content {
}
li.comment {
}
li.comment:last-child {
	border-bottom: 0;
	padding-bottom: 0;
}
li.comment .reply {

}

#respond {
	font-size: 1.3rem;
	line-height: 160%;
}

.comment-form-author,
.comment-form-email,
.comment-form-url {
	margin: 0 0 20px;
	float: left;
	width: 32%;
}
.comment-form-email {
	margin: 0 2%;
}
.comment-form-author input,
.comment-form-email input,
.comment-form-url input,
#comment {
	display: block;
	padding: 5px;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	width: 100%;
	font-size: 1.3rem;
	border: 1px solid #ccc;
}
.comment-form-author input:focus,
.comment-form-email input:focus,
.comment-form-url input:focus,
#comment:focus {
	outline: 0;
	box-shadow: 0 3px 12px rgba( 100, 100, 100, 0.5 );
}

/*
#####  #    # ##### #####  ####  #    #  ####
#    # #    #   #     #   #    # ##   # #
#####  #    #   #     #   #    # # #  #  ####
#    # #    #   #     #   #    # #  # #      #
#    # #    #   #     #   #    # #   ## #    #
#####   ####    #     #    ####  #    #  ####
*/
input[type="submit"],
input[type="button"],
button,
.button {
	border: 1px solid #999;
	padding: 5px;
	background: #ccc;
	font-family: 'Source Sans Pro';
	font-size: 1rem;
	cursor: pointer;
}
input[type="submit"]:hover,
input[type="button"]:hover,
button:hover,
.button:hover {
	background: #ddd;
}
input[type="submit"]:active,
input[type="button"]:active,
button:active,
.button:active,
input[type="submit"]:focus,
input[type="button"]:focus,
button:focus,
.button:focus {
	outline: 0;
	background: #eee;
}
/*
#####   ####   ####  #####  ####     #    #   ##   #    #
#    # #    # #        #   #         ##   #  #  #  #    #
#    # #    #  ####    #    ####     # #  # #    # #    #
#####  #    #      #   #        #    #  # # ###### #    #
#      #    # #    #   #   #    #    #   ## #    #  #  #
#       ####   ####    #    ####     #    # #    #   ##
*/
/*
nav.post-nav {
	position: relative;
	width: calc( 100% + 100px );
	left: -50px;
}
.post-nav-item {
	padding: 30px;
}
.post-nav-prev {
	padding-right: 0;
	float: right;
}
.post-nav-next {
	padding-left: 0;
	float: left;
}
*/
.post-nav-item {
	position: fixed;
	top: 50%;
	font-size: 3rem;
}
.post-nav-item a {
	color: rgba( 84, 84, 84, 0.4 );
}
.post-nav-item a:hover {
	color: #333;
}
.post-nav-prev {
	right: 10px;
}
.post-nav-next {
	left: 10px;
}
/*
#####   ####   ####  #####    #    #   ##   #    #
#    # #    # #        #      ##   #  #  #  #    #
#    # #    #  ####    #      # #  # #    # #    #
#####  #    #      #   #      #  # # ###### #    #
#      #    # #    #   #      #   ## #    #  #  #
#       ####   ####    #      #    # #    #   ##
*/
/*
#####    ##    ####  ###### #####     #    #   ##   #    #
#    #  #  #  #    # #      #    #    ##   #  #  #  #    #
#    # #    # #      #####  #    #    # #  # #    # #    #
#####  ###### #  ### #      #    #    #  # # ###### #    #
#      #    # #    # #      #    #    #   ## #    #  #  #
#      #    #  ####  ###### #####     #    # #    #   ##
*/
nav.paged-nav {
	text-align: center;
}
nav > .paged-item,
nav a {
	text-indent: 999em;
	overflow: hidden;
	margin: 0 5px;
	display: inline-block;
	width: 16px;
	height: 16px;
	border-radius: 10px;
}
nav a {
	background: rgba( 140, 140, 140, 0.4 );
}
nav .paged-item {
	background: rgba( 200, 200, 200, 0.4 );
}
header a.genericon {

	/*text-indent: -999rem;*/
	overflow: hidden;
}

/*
#### ##     ##    ###     ######   ########  ######
 ##  ###   ###   ## ##   ##    ##  ##       ##    ##
 ##  #### ####  ##   ##  ##        ##       ##
 ##  ## ### ## ##     ## ##   #### ######    ######
 ##  ##     ## ######### ##    ##  ##             ##
 ##  ##     ## ##     ## ##    ##  ##       ##    ##
#### ##     ## ##     ##  ######   ########  ######
*/
.alignleft {
	display: block;
	float: left;
	margin-right: 10px;
}
.alignright {
	display: block;
	float: right;
	margin-left: 10px;
}
.aligncenter {
	margin: 0 auto;
}
.entry-content img,
.comment-content img,
.widget img {
	max-width: 100%; /* Fluid images for posts, comments, and widgets */
	height: auto;
}
img[class*="align"],
img[class*="wp-image-"] {
	/*height: auto;*/ /* Make sure images with WordPress-added height and width attributes are scaled correctly */
}
img.size-full {
	/*max-width: 97.5%;*/
	width: auto; /* Prevent stretching of full-size images with height and width attributes in IE8 */
}
.entry-content img.wp-smiley {
	border: none;
	margin-bottom: 0;
	margin-top: 0;
	padding: 0;
}
img.alignleft,
img.alignright,
img.aligncenter {
	margin-bottom: 1.625em;
}
p img,
.wp-caption {
	margin-top: 0.4em;
}
.wp-caption {
	/*background: #eee;*/
	/*margin-bottom: 1.625em;*/
	max-width: 96%;
	/*padding: 9px;*/
}
.wp-caption img {
	display: block;
	margin: 0;
	/*max-width: 98%;*/
}
.wp-caption .wp-caption-text,
.gallery-caption {
	color: #666;
	font-family: "Antic Slab", serif;
	font-size: 1.1rem;
}
.wp-caption .wp-caption-text {
	margin: 0;
	padding: 5px 0;
	position: relative;
}
#content .gallery {
	margin: 0 auto 1.625em;
}
#content .gallery a img {
	border: none;
}
img#wpstats {
	display: block;
	margin: 0 auto 1.625em;
}
#content .gallery-columns-4 .gallery-item {
	width: 23%;
	padding-right: 2%;
}
#content .gallery-columns-4 .gallery-item img {
	width: 100%;
	height: auto;
}

